# RAG_Project_2

./: README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test.ipynb
data/: maruti.txt
src/config/: config.py
src/data_ingestion/: document_processor.py
src/graph_builder/: graph.py
src/nodes/: agent_node.py
src/state/: graph_state.py
src/vectorstore/: vectorstore.py
